unpackaged/main/default/objects/Business_Automations__mdt/Business_Automations__mdt.object-meta.xml
<CustomObject>
    <label>Business Automation</label>
    <pluralLabel>Business Automations</pluralLabel>
</CustomObject>