unpackaged/main/default/objects/Business_Automations__mdt/fields/Closed_Lost_Reopen_Days__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reopen_Days__c</fullName>
    <label>Closed Lost Reopen Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>