unpackaged/main/default/objects/Business_Automations__mdt/fields/Days_to_Close_in_Prior_Owner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_in_Prior_Owner_s_Name__c</fullName>
    <label>Days to Close in Prior Owner&#39;s Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>