unpackaged/main/default/objects/Business_Automations__mdt/fields/Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Amount__c</fullName>
    <label>Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>