unpackaged/main/default/objects/Business_Automations__mdt/fields/Default_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Close_Days__c</fullName>
    <label>Default Close Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>