unpackaged/main/default/objects/Business_Automations__mdt/fields/Default_Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Default_Days_to_Activation__c</fullName>
    <label>Default Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>