unpackaged/main/default/objects/Business_Automations__mdt/fields/Default_SQO_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_SQO_Days__c</fullName>
    <label>Default SQO Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>