unpackaged/main/default/objects/Business_Automations__mdt/fields/Default_SQO_Probability__c.field-meta.xml
<CustomField>
    <fullName>Default_SQO_Probability__c</fullName>
    <label>Default SQO Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>