unpackaged/main/default/objects/Business_Automations__mdt/fields/Employee_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Employee_Lower_Bound__c</fullName>
    <label>Employee Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>