unpackaged/main/default/objects/Business_Automations__mdt/fields/Material_Deal_Change__c.field-meta.xml
<CustomField>
    <fullName>Material_Deal_Change__c</fullName>
    <label>Material Deal Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>