unpackaged/main/default/objects/Business_Automations__mdt/fields/Material_Deal_Size_XL__c.field-meta.xml
<CustomField>
    <fullName>Material_Deal_Size_XL__c</fullName>
    <label>Material Deal Size (XL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>