unpackaged/main/default/objects/Business_Automations__mdt/fields/Min_Land_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Land_Size__c</fullName>
    <label>Min Land Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>