unpackaged/main/default/objects/Business_Automations__mdt/fields/Planning_Period__c.field-meta.xml
<CustomField>
    <fullName>Planning_Period__c</fullName>
    <label>Planning Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
                <default>true</default>
                <label>Quarter</label>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>