unpackaged/main/default/objects/Business_Automations__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>